feat: add keywords 031-040 — Data Structures & Algorithms batch 1